Fix start voyage (#173)
* Fix start voyage page

* Styling improvements

* Styling create voyage form

* Make the suggested route color better contrast

* Found more issues with the seeds. There was a vessel report too much on the main route and the other voyages where moved so none of them are on land and all of them are in europe.

--- a/src/client/App.css
+++ b/src/client/App.css
@@ -6,3 +6,19 @@ body {
   background-color: #edf3f8;
   margin: 0;
 }
+
+.start-voyage-form {
+  width: 100%;
+  padding: 2rem;
+  margin-top: 2rem;
+}
+
+.start-voyage-form > * {
+  margin: 2rem;
+}
+
+.start-voyage-form__submit-button {
+  justify-content: center;
+  margin: 2rem;
+  margin-left: 4rem;
+}
